fix : 덱의 카드가 셔플된 것을 검증하기 위해 새로운 테스트 코드 작성 및 카드 도메인 equals, hashcode 재정의