@@ -3,6 +3,7 @@ package blackjack.domain.deck;
 import blackjack.domain.card.Card;
 import blackjack.domain.card.Rank;
 import blackjack.domain.card.Suit;
+
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -22,6 +23,7 @@ public class Deck {
     public void shuffle() {
         Collections.shuffle(this.cards);
     }
+
     private List<Card> createAllCards() {
         return Arrays.stream(Suit.values())
                 .flatMap(suit -> Arrays.stream(Rank.values())
@@ -33,11 +35,15 @@ public class Deck {
         if (cards.isEmpty()) {
             throw new IllegalStateException(EMPTY_DECK_MESSAGE);
         }
-        return cards.remove(0);
+        return cards.removeFirst();
     }
 
     public int size() {
         return cards.size();
+    }
+
+    public List<Card> getCards() {
+        return List.copyOf(cards);
     }
 
     @Override
